Expression examples and identation fixes

--- a/en/campaign/08.03 - Adding and Editing an Event to the Campaign.md
+++ b/en/campaign/08.03 - Adding and Editing an Event to the Campaign.md
@@ -43,4 +43,4 @@ When the flow is started or the message is sent.
 
 ![](/img/campaign/campaign15.png)
 
-5. Click on "Ok" to save the alterations.
+5. Click on "Ok" to save the changes.
