--- a/en/contacts/04.09 - Importing Contacts.md
+++ b/en/contacts/04.09 - Importing Contacts.md
@@ -1,4 +1,4 @@
-The contacts importation allows you to add an entire group to the platform using a simple XLS (MS Excel) spreadsheet. The contacts will be placed in a new contact group that corresponds to a spreadsheet imported name. Notice that, you should connect a channel to your account to import contacts. 
+Importing contacts allows you to add an entire group to the platform using a simple XLS (MS Excel) spreadsheet. The contacts will be placed in a new contact group that corresponds to a spreadsheet imported name. Notice that, you should connect a channel to your account to import contacts. 
 
 **To import contacts, import an XLS spreadsheet containing:**
 - Address's column corresponds to each address contacts and can contain (the number columns contains the phone number using the E164 format, and/or a Telegram column containing the Telegram identification, and/or a Twitter column for each contact, and/or email column). When imported, the platform will show the contacts phone number without the country code.
