--- a/en/triggers/07.09 - Ignoring a Keyword in a Flow.md
+++ b/en/triggers/07.09 - Ignoring a Keyword in a Flow.md
@@ -15,4 +15,4 @@ If you want to keep your contacts in a flow until they finish or it expires, you
 
 ![](/img/triggers/triggers19.png)
 
-4. Click on Save alterations.
+4. Click on *Save changes*.
