Text mistake fixes

--- a/en/channels/02.01 - Channels Introduction.md
+++ b/en/channels/02.01 - Channels Introduction.md
@@ -66,8 +66,8 @@ Connect a Facebook page account to your workspace to communicate with your conta
 ### External API
 
 The API channel allows sending and receiving messages through external suppliers. This could be a chat/external message service or an aggregator not listed.
-For example, if you want to enjoy the platform automation provides through an external service, you could develop a link to your system and connect them through your API.
+For example, if you want to scale up the automation already provided by the platform, you could call for external hooks, eg. your system's, and connect them through your external API. We would then send and receive messages on via the external service.
 
-As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
+As long as your contacts have the URN type your channel is configured to correspond with, we'll send outgoing messages using the endpoint you configure.
 
 </div>
