--- a/en/flows/06.04 - Know the Flow Editor.md
+++ b/en/flows/06.04 - Know the Flow Editor.md
@@ -79,7 +79,7 @@ Click on this button to put the contacts on the flow. You can add specifics cont
 
 **What is new in the New Flow Editor**
 
-In the New Editor you will also be able to build your flows and drive your contacts through it. There are some anotomical diferentes between the new and the old editor as follow:
+In the New Editor you will also be able to build your flows and drive your contacts through it. There are some anatomical diferences between the new and the old editor as follow:
 
 #### Actions and Split Actions are shown in the same drop-down menu.
 
